# opengl-HopfTorus

./: .gitignore  README.md  opengl-HopfTorus.cabal  stack.yaml
src/: Torus1.hs  Torus2.hs  Torus3.hs  TwentyTori.hs
src/Colors/: Color.hs  Palettes.hs
src/Cone/: TestTransfoCone.hs  TransfoCone.hs
src/Torus1/: Triangles.hs
src/Torus2/: Triangles.hs
src/Torus3/: Triangles.hs
src/TranslateReorient/: TranslateReorient.hs
src/Utils/: Normals.hs
