name:                opengl-HopfTorus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/opengl-HopfTorus#readme
license:             GPL-3
-- license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Torus1
                     , Torus1.Triangles
                     , Utils.Normals
--                     , Torus2
                     , Torus2.Triangles
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
                     , directory
                     , array
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/opengl-HopfTorus
